# telemetry-ansible

./: .pre-commit-config.yaml  .tool-versions  Makefile  README.md  ansible.cfg  pyproject.toml
.config/: ansible-lint.yml
ansible_plugins/: aws_ec2.yml
inventories/: aws_ec2.yml  clickhouse_aws_ec2.yml
playbooks/TEL-2837/: playbook.yml
playbooks/TEL-2906/: playbook.yml
playbooks/TEL-3188/: playbook.yml
tools/: check_tool_versions.sh
