[tool.poetry]
name = "telemetry_ansible"
version = "0.1.0"
description = "Run ad-hoc commands across Telemetry instances"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]

[tool.poetry.dependencies]
boto3 = "*"
colorama = "^0.4.4"
python = "^3.10"
pyyaml = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "^20.8b1"
diagrams = "^0.19.1"
inquirer = "^2.7.0"
invoke = "^1.4.1"
pre-commit = "^2.7.1"
pytest = "^5.3.5"
pytest-black = "^0.3.10"
pytest-cov = "^2.8.1"
pytest-pycodestyle = "^2.0.0"
reorder-python-imports = "^2.0.0"
safety = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
